# HBF

./: CMakeLists.txt  GraphFormat.txt  Main.cu  README.txt  anan.py  config.cuh  createGraph.py  createIndex.py  log
XLib/: CMakeLists.txt
XLib/Base/Device/: BaseDevice.cuh
XLib/Base/Device/DataMovement/include/impl/: DataMovementDynamic.i.cuh
XLib/Base/Device/Primitives/include/: WarpScan.cuh
XLib/Base/Device/Primitives/include/impl/: WarpScan.i.cuh
XLib/Base/Device/Util/: Util.cuh
XLib/Base/Device/Util/include/: basic.cuh  copy2print.cuh  definition.cuh  global_sync.cuh
XLib/Base/Host/: BaseHost.hpp
XLib/Base/Host/include/: Numeric.hpp  fUtil.hpp  printExt.hpp
XLib/Base/Host/include/impl/: Numeric.i.hpp  printExt.i.hpp
XLib/CMakeExample/: CMakeLists.txt  Valgrind.txt
XLib/Graph/Device/: GraphDevice.cuh
XLib/Graph/Device/include/: cudaGraphNamespace.cuh  cudaGraphPreDeal.cuh  cudaGraphWeight.cuh
XLib/Graph/Device/src/: cudaGraph.cu  cudaGraphPreDeal.cu  cudaGraphWeight.cu
XLib/Graph/Host/OLD/: GraphSTDC.hpp  GraphSTDC_Read.cpp  graphSTD.cpp
XLib/Graph/Host/include/: GraphBase.hpp  GraphDegree.hpp  GraphNamespace.hpp  GraphPreDeal.hpp  GraphSTD.hpp  GraphWeight.hpp  OverlayGraph.hpp
XLib/Graph/Host/src/: GraphBase.cpp  GraphCSRMerge.cpp  GraphDegree.cpp  GraphDegree_Read.cpp  GraphPreDeal.cpp  GraphSTD.cpp  GraphWeight.cpp  GraphWeight_Read.cpp  OverlayGraph.cpp  readHeader.cpp
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  debug.txt  log.txt
include/Device/: GNR_KernelFun.cuh  GNR_KernelFunc.cuh  GNR_KernelFunc_old.cuh  Get_Node_Info.cuh  HBFGraph.cuh  LOG.cuh  PreDeal_KernelFun.cuh  PreDeal_KernelFunc.cuh  WorkEfficient_KernelFun.cuh  Write_KenelFunc.cuh  cudaOverlayGraph.cuh
include/Host/: GraphSSSP.hpp
src/Device/: DegreeMarker.cu  GNR_KernelMain.cu  HBFGraph.cu  WorkEfficient.cu  cudaOverlayGraph.cu
src/Device/Kernels/: WorkEfficient_KernelDispath.cu  WorkEfficient_KernelMain.cu
src/Host/: BellmanFordQueue.cpp  BoostDijkstra.cpp  GraphSSSP.cpp
test_chl/: cMemTest  constantMemTest.cu  log.txt  schdTest  schdTest.cu  test  test.cu  vectorWrite.cu  writeTest  writeTest.cu  writeTest.ptx
